--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1>Hello World!</h1>
     
-    <script src="assets/js/main.min.js"></script>
+    <script src="assets/scripts/main.min.js"></script>
 </body>
 </html>
