--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello World!</h1>
     
+    <script src="assets/scripts/lib/plugins.min.js"></script>
     <script src="assets/scripts/main.min.js"></script>
 </body>
 </html>
